--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-component-library",
+  "name": "@blueberry/react-component-library",
   "version": "0.0.1",
   "description": "Component Library based directly from component",
   "main": "lib/index.js",
