--- a/example_app/package.json
+++ b/example_app/package.json
@@ -26,6 +26,7 @@
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.2",
     "classnames": "^2.1.1",
+    "color": "^0.10.1",
     "compression": "^1.4.0",
     "cors": "^2.6.0",
     "css-loader": "^0.22.0",
@@ -55,6 +56,7 @@
     "ip": "^1.0.2",
     "isomorphic-fetch": "^2.1.1",
     "jsdom": "^7.0.2",
+    "json-loader": "^0.5.4",
     "less": "^2.5.1",
     "less-loader": "^2.0.0",
     "nconf": "^0.8.1",
