--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueberry/react-component-library",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Component Library based directly from component",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
@@ -49,16 +49,18 @@
     "rimraf": "^2.4.3"
   },
   "dependencies": {
-    "color": "^0.10.1",
     "highlight.js": "^8.9.1",
-    "history": "^1.13.1",
-    "immutable": "^3.7.5",
     "nunjucks": "^2.2.0",
-    "radium": "^0.15.3",
-    "react": "^0.14.3",
     "react-docgen": "^2.4.0",
     "react-highlight": "^0.5.1",
-    "react-router": "^1.0.0",
     "tosource": "^1.0.0"
+  },
+  "peerDependencies": {
+    "color": "^0.10.1",
+    "history": "^1.13.1",
+    "immutable": "^3.7.5",
+    "radium": "^0.15.3",
+    "react": "^0.14.3",
+    "react-router": "^1.0.0"
   }
 }
