--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bluekit",
-  "version": "0.0.20",
+  "version": "0.0.23",
   "description": "Visualisation and Playground generated from Components",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
@@ -35,6 +35,13 @@
   },
   "homepage": "https://github.com/blueberryapps/react-bluekit#readme",
   "devDependencies": {
+    "babel-core": ">=5",
+    "babel-loader": ">=5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": ">=5",
+    "babel-preset-react": ">=5",
+    "babel-preset-react-hmre": ">=1",
+    "babel-preset-stage-0": ">=5",
     "babel-cli": ">=5",
     "eslint": "^1.7.1",
     "eslint-config-airbnb": "^0.1.0",
@@ -49,18 +56,14 @@
     "rimraf": "^2.4.3"
   },
   "dependencies": {
-    "babel-core": ">=5",
-    "babel-loader": ">=5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": ">=5",
-    "babel-preset-react": ">=5",
-    "babel-preset-react-hmre": ">=1",
-    "babel-preset-stage-0": ">=5",
     "color": ">=0.10",
+    "css-loader": "^0.23.1",
     "eventsource-polyfill": ">=0.9",
     "highlight.js": ">=8",
     "history": ">=1",
     "immutable": ">=3",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.4.2",
     "nunjucks": ">=2",
     "radium": ">=0.15",
     "react": ">=0.13",
@@ -69,6 +72,7 @@
     "react-highlight": ">=0.5",
     "react-hot-loader": "^1.3.0",
     "react-router": ">=1",
+    "sass-loader": "^3.1.2",
     "tosource": ">=1",
     "webpack": ">=1",
     "webpack-dev-middleware": ">=1",
