--- a/example/package.json
+++ b/example/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
@@ -39,9 +40,5 @@
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
-  },
-  "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6"
   }
 }
