--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/blueberryapps/react-bluekit#readme",
   "devDependencies": {
+    "babel-cli": ">=5",
     "babel-core": ">=5",
     "babel-loader": ">=5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -42,7 +43,7 @@
     "babel-preset-react": ">=5",
     "babel-preset-react-hmre": ">=1",
     "babel-preset-stage-0": ">=5",
-    "babel-cli": ">=5",
+    "babel-register": "^6.6.5",
     "eslint": "^1.7.1",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.5.1",
