--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "babel-cli": ">=5",
     "babel-core": ">=5",
+    "babel-eslint": "^5.0.0",
     "babel-loader": ">=5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": ">=5",
@@ -50,6 +51,7 @@
     "expect": "^1.12.2",
     "gulp": "^3.9.1",
     "mocha": "^2.3.3",
+    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.4.3"
   },
   "dependencies": {
