--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expect": "^1.12.2",
     "gulp": "^3.9.1",
     "mocha": "^2.3.3",
+    "react-hot-loader": "^1.3.0",
     "rimraf": "^2.4.3"
   },
   "dependencies": {
