--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "babel-cli": ">=5",
     "babel-core": ">=5",
+    "babel-eslint": "^5.0.0",
     "babel-loader": ">=5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": ">=5",
