--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "color": ">=0.10",
+    "gulp": ">=3",
     "highlight.js": ">=8",
     "history": ">=1",
     "immutable": ">=3",
