--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "immutable": ">=3",
     "nunjucks": ">=2",
     "radium": ">=0.15",
-    "react": ">=0.13",
+    "react": "^0.14.7",
+    "react-copy-to-clipboard": "^4.0.2",
     "react-docgen": ">=2.4.0",
     "react-dom": ">=0.13",
     "react-highlight": ">=0.5",
