--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "color": ">=0.10",
+    "fuzzy": "^0.1.1",
     "gulp": ">=3",
     "highlight.js": ">=8",
     "history": ">=1",
