--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "gulp": "^3.9.1",
     "mocha": "^2.3.3",
     "react-hot-loader": "^1.3.0",
-    "react-svg-icon-generator": "^0.1.9",
+    "react-svg-icon-generator": "0.2.0",
     "rimraf": "^2.4.3"
   },
   "dependencies": {
