--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "gulp": "^3.9.1",
     "mocha": "^2.3.3",
     "react-hot-loader": "^1.3.0",
-    "react-svg-icon-generator": "0.2.0",
+    "react-svg-icon-generator": "0.2.1",
     "rimraf": "^2.4.3"
   },
   "peerDependencies": {
@@ -73,6 +73,7 @@
     "react-docgen": ">=2.4",
     "react-highlight": ">=0.5",
     "react-pure-render": ">=1",
+    "react-svg-icon-generator": "^0.2.1",
     "tosource": ">=1"
   }
 }
