--- a/example/package.json
+++ b/example/package.json
@@ -41,5 +41,8 @@
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "react-hot-loader": "^3.0.0-beta.2"
   }
 }
