--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-copy-to-clipboard": ">=4",
     "react-docgen": ">=2.4",
     "react-highlight": ">=0.5",
+    "react-hot-loader": "^3.0.0-beta.2",
     "react-pure-render": ">=1",
     "tosource": ">=1"
   }
