--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "^3.5.1",
     "expect": "^1.12.2",
     "gulp": "^3.9.1",
+    "gulp-ava": "^0.12.1",
     "mocha": "^2.3.3",
     "react-hot-loader": "^1.3.0",
     "react-svg-icon-generator": "0.2.2",
@@ -80,5 +81,14 @@
     "react-pure-render": ">=1",
     "react-responsive": "^1.1.3",
     "tosource": ">=1"
+  },
+  "ava": {
+    "files": [
+      "src/**/__test__/**/*.js"
+    ],
+    "require": [
+      "babel-register",
+      "babel-polyfill"
+    ]
   }
 }
