--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
       "SwitchCase": 1
     }],
     "key-spacing": 0,
+    "keyword-spacing": [2, {"after": true}],
     "new-cap": [2, {"capIsNew": false, "newIsCap": true}],
     "new-parens": 0,
     "no-bitwise": 0,
@@ -82,12 +83,10 @@
     "radix": 2,
     "semi": 0,
     "semi-spacing": [2, {"before": false, "after": true}],
-    "space-after-keywords": [2, "always"],
     "space-before-blocks": [2, "always"],
     "space-before-function-paren": [2, "never"],
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
     "space-unary-ops": [2, {"words": true, "nonwords": false}],
     "strict": [0, "never"],
     "use-isnan": 2,
