--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "babel-preset-react-hmre": ">=1",
     "babel-preset-stage-0": ">=5",
     "babel-register": "^6.6.5",
-    "eslint": "^1.7.1",
+    "eslint": "^2.0.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.5.1",
+    "estraverse-fb": "^1.3.1",
     "expect": "^1.12.2",
     "gulp": "^3.9.1",
     "gulp-ava": "^0.12.1",
@@ -70,6 +71,7 @@
     "color": ">=0.10",
     "fuzzy": ">=0.1",
     "gulp": ">=3",
+    "gulp-eslint": "^3.0.1",
     "immutable": ">=3",
     "nunjucks": ">=2",
     "radium": ">=0.15",
