--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "babel-preset-react-hmre": ">=1",
     "babel-preset-stage-0": ">=5",
     "babel-register": "^6.6.5",
-    "eslint": "^2.0.0",
+    "eslint": "2.0.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.5.1",
     "estraverse-fb": "^1.3.1",
@@ -61,7 +61,8 @@
     "mocha": "^2.3.3",
     "react-hot-loader": "^1.3.0",
     "react-svg-icon-generator": "0.2.2",
-    "rimraf": "^2.4.3"
+    "rimraf": "^2.4.3",
+    "webpack": "^1.13.3"
   },
   "peerDependencies": {
     "react": ">=0.13",
@@ -73,6 +74,7 @@
     "gulp": ">=3",
     "gulp-eslint": "^3.0.1",
     "immutable": ">=3",
+    "lodash": "^4.16.6",
     "nunjucks": ">=2",
     "radium": ">=0.15",
     "react-ace": ">=3",
