--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-register": "^6.6.5",
     "eslint": "2.0.0",
     "eslint-config-airbnb": "^0.1.0",
+    "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-react": "^3.5.1",
     "estraverse-fb": "^1.3.1",
     "expect": "^1.12.2",
