--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bluekit",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Visualisation and Playground generated from Components",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
@@ -74,7 +74,7 @@
     "fuzzy": ">=0.1",
     "gulp": ">=3",
     "gulp-eslint": "^3.0.1",
-    "immutable": "^3.8.1",
+    "immutable": "3.8.1",
     "lodash": "^4.16.6",
     "nunjucks": ">=2",
     "radium": ">=0.15",
