--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bluekit",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Visualisation and Playground generated from Components",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
@@ -29,6 +29,7 @@
     "es7",
     "babel",
     "react-component",
+    "typescript",
     "visualization",
     "playground",
     "development",
