React >= 15.5.0 support - Use prop-types module instead of React.PropTypes, standardised usage - Updated react-docgen version constraint - Updated yarn lockfiles

--- a/package.json
+++ b/package.json
@@ -82,11 +82,12 @@
     "immutable": "3.8.1",
     "lodash": "^4.16.6",
     "nunjucks": ">=2",
+    "prop-types": "^15.5.8",
     "radium": ">=0.15",
     "react-ace": ">=3",
     "react-color": ">=2",
     "react-copy-to-clipboard": ">=4",
-    "react-docgen": ">=2.4",
+    "react-docgen": ">=2.14.0",
     "react-docgen-typescript": "https://github.com/imtoo/react-docgen-typescript.git",
     "react-highlight": ">=0.5",
     "react-pure-render": ">=1",
