--- a/example/package.json
+++ b/example/package.json
@@ -27,6 +27,9 @@
     "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
+  "dependencies": {
+    "react-blukit": "file:../"
+  },
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
