--- a/circle.yml
+++ b/circle.yml
@@ -19,3 +19,10 @@ test:
         background: true
     - sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost:3000/
+
+deployment:
+  create_release_branch:
+    branch:
+      - master
+    commands:
+      - ./publish
