--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:6.14.3-jessie
+
     steps:
       - checkout
       - run:
@@ -24,7 +25,9 @@ jobs:
   test:
     docker:
       - image: circleci/node:6.14.3-jessie
+
     steps:
+      - checkout
       - restore_cache:
           key: base-cache-{{ checksum "package.json" }}
       - restore_cache:
@@ -43,7 +46,9 @@ jobs:
   publish:
     docker:
       - image: circleci/node:6.14.3-jessie
+
     steps:
+      - checkout
       - restore_cache:
           key: base-cache-{{ checksum "package.json" }}
       - restore_cache:
@@ -51,11 +56,12 @@ jobs:
       - run:
           command: ./publish
 
+
 workflows:
   version: 2
   build-and-test:
     jobs:
-      - build:
+      - build
       - test:
           requires:
             - build
