--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "node server.js",
+    "gulp": "gulp $1",
     "lint": "eslint src"
   },
   "repository": {
