--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:lib": "babel src --out-dir lib",
     "check": "npm run lint && npm run test",
     "clean": "rimraf lib",
+    "gulp": "gulp $1",
     "lint": "eslint src test examples",
     "postversion": "git push && git push --tags && npm run clean",
     "prepublish": "npm run clean && npm run build",
